--- a/references.bib
+++ b/references.bib
@@ -202,3 +202,17 @@
 	url = {http://dx.doi.org/10.1038/s41586-019-1923-7},
 	langid = {en}
 }
+
+@article{rives2021,
+	title = {Biological structure and function emerge from scaling unsupervised learning to 250 million protein sequences},
+	author = {Rives, Alexander and Meier, Joshua and Sercu, Tom and Goyal, Siddharth and Lin, Zeming and Liu, Jason and Guo, Demi and Ott, Myle and Zitnick, C. Lawrence and Ma, Jerry and Fergus, Rob},
+	year = {2021},
+	month = {04},
+	date = {2021-04-05},
+	journal = {Proceedings of the National Academy of Sciences},
+	volume = {118},
+	number = {15},
+	doi = {10.1073/pnas.2016239118},
+	url = {http://dx.doi.org/10.1073/pnas.2016239118},
+	langid = {en}
+}
