--- a/references.bib
+++ b/references.bib
@@ -216,3 +216,41 @@
 	url = {http://dx.doi.org/10.1073/pnas.2016239118},
 	langid = {en}
 }
+
+@misc{rao2020,
+	title = {Transformer protein language models are unsupervised structure learners},
+	author = {Rao, Roshan and Meier, Joshua and Sercu, Tom and Ovchinnikov, Sergey and Rives, Alexander},
+	year = {2020},
+	month = {12},
+	date = {2020-12-15},
+	url = {http://dx.doi.org/10.1101/2020.12.15.422761}
+}
+
+@article{duarte2010,
+	title = {Optimal contact definition for reconstruction of Contact Maps},
+	author = {Duarte, Jose M and Sathyapriya, Rajagopal and Stehr, Henning and Filippis, Ioannis and Lappe, Michael},
+	year = {2010},
+	month = {05},
+	date = {2010-05-27},
+	journal = {BMC Bioinformatics},
+	volume = {11},
+	number = {1},
+	doi = {10.1186/1471-2105-11-283},
+	url = {http://dx.doi.org/10.1186/1471-2105-11-283},
+	langid = {en}
+}
+
+@article{lin2023,
+	title = {Evolutionary-scale prediction of atomic-level protein structure with a language model},
+	author = {Lin, Zeming and Akin, Halil and Rao, Roshan and Hie, Brian and Zhu, Zhongkai and Lu, Wenting and Smetanin, Nikita and Verkuil, Robert and Kabeli, Ori and Shmueli, Yaniv and dos Santos Costa, Allan and Fazel-Zarandi, Maryam and Sercu, Tom and Candido, Salvatore and Rives, Alexander},
+	year = {2023},
+	month = {03},
+	date = {2023-03-17},
+	journal = {Science},
+	pages = {1123--1130},
+	volume = {379},
+	number = {6637},
+	doi = {10.1126/science.ade2574},
+	url = {http://dx.doi.org/10.1126/science.ade2574},
+	langid = {en}
+}
