--- a/Chapter4_Proteins.qmd
+++ b/Chapter4_Proteins.qmd
@@ -24,44 +24,46 @@ Mathematically, attention produces an attention map, which is similar to a covar
 
 ### Multi-Head Attention: Learning Many Correlation Patterns
 
-A key advantage of attention is that it does not learn just one correlation pattern—it learns many at the same time. Each attention head in a transformer model acts like an independent correlation matrix, capturing different kinds of dependencies. Some heads might focus on local relationships (like adjacent words in a sentence or nearby mutations in DNA), while others capture long-range dependencies (like structural dependencies in proteins or distant but functionally linked words in a text).
+A key advantage of multi-headed, multi-layer attention is that it does not learn just one correlation pattern—it learns many at the same time. Multiple parallel attention heads in a transformer layer model act like an independent correlation matrix, capturing different kinds of dependencies. Some heads might focus on local relationships (like adjacent words in a sentence or nearby mutations in DNA), while others capture long-range dependencies (like structural dependencies in proteins or distant but functionally linked words in a text). Moreover, because attention is stacked in series across layers, each layer refines and builds on the patterns learned by previous layers. This allows transformers to discover complex, hierarchical relationships that are impossible to capture with a simple, static correlation matrix.
 
-Moreover, because attention is stacked across layers, each layer refines and builds on the patterns learned by previous layers. This allows transformers to discover complex, hierarchical relationships that are impossible to capture with a simple, static correlation matrix.
+### The core Attention Equation
 
-### The Attention Equation and Multi-Head Attention Mechanism
-
-The fundamental equation of attention in transformer models is based on computing the relationship between different positions in a sequence through the **Query (Q)**, **Key (K)**, and **Value (V)** matrices. The attention score is calculated as:
+The fundamental equation of attention in transformer models, the core of each attention head in each layer, is based on computing the relationship between different positions in a sequence through the **Query (Q)**, **Key (K)**, and **Value (V)** matrices. The attention score is calculated as:
 
 $$\text{Attention}(Q, K, V) = \text{softmax} \left(\frac{Q K^T}{\sqrt{d_k}}\right) V $$
 
 where $(Q)$ represents the queries (which ask for relevant information), $(K)$ represents the keys (which provide relevance scores), and $(V)$ represents the values (the actual content being retrieved). The **softmax function** ensures that the attention scores sum to 1, effectively acting as a weighting mechanism over the values.
 
-The Query ($Q$), Key ($K$), and Value ($V$) matrices are derived from the input **embeddings**, which represent tokens in a continuous vector space. Each input sequence is first embedded into a fixed-dimensional space, forming a matrix where each row corresponds to a token's embedding. These embeddings are specific to the given sequence, meaning different input sequences will produce different embeddings. The transformation into $Q$, $K$, and $V$ happens through learned **weight matrices** ($W_Q$, $W_K$, $W_V$), which remain **constant after training** but are applied dynamically to the current sequence. Specifically, these transformations are computed as:
+The Query ($Q$), Key ($K$), and Value ($V$) matrices are derived from the input **embeddings** ($X$), which represent tokens in a continuous vector space. These embeddings are specific to the given sequence, meaning different input sequences will produce different embeddings. The transformation into $Q$, $K$, and $V$ happens through learned **weight matrices** ($W_Q$, $W_K$, $W_V$), which remain **constant after training** but are applied dynamically to the current sequence. Specifically, these transformations are computed as:
 
 $$Q = X W_Q, \quad K = X W_K, \quad V = X W_V$$
 
-where $(X)$ is the matrix of input embeddings for the current sequence. Since ($W_Q$, $W_K$, $W_V$) are learned parameters, they do not change per sequence after training, but the values of $Q$, $K$, and $V$ do change since they depend on the specific embeddings of the input sequence. This means that while the attention mechanism itself is fixed after training, its outputs are entirely **input-dependent**, allowing the model to flexibly compute attention maps for different sequences while maintaining a consistent learned transformation process.
-
-Each layer in a transformer applies this mechanism over the output sequence of the previous layer, computing a **contextualized representation** of each token based on its interactions with all other tokens. This results in an **attention map**, which visually represents how each token attends to every other token in the sequence.
+Since ($W_Q$, $W_K$, $W_V$) are learned parameters, they do not change per sequence after training, but the values of $Q$, $K$, and $V$ do change since they depend on the specific embeddings ($X$) of the input sequence. This means that while the attention mechanism itself is fixed after training, its outputs are entirely **input-dependent**, allowing the model to flexibly compute attention maps for different sequences while maintaining a consistent learned transformation process.
 
 ### **Mathematical Link Between Attention and Correlation**
 
-We can draw a mathematical connection between **self-attention** (through the ($QK^T$) term) and **correlation between elements of the input matrix (**$X$). This helps bridge the intuition that attention is like a learned, contextual correlation matrix.
+Lets expand slightly on the conceptual analogy between attention and "covariance". The core self-attention mechanism:
 
-In the core self-attention mechanism:
-
-$$A = \text{softmax} \left(\frac{Q K^T}{\sqrt{d_k}} \right)$$
+$$A = \text{softmax} \left(\frac{QK^T}{\sqrt{d_k}} \right)$$
 
 where:
 
--   ($Q$) (Query matrix) has shape ($\text{seq}$, $d_k$)
--   ($K$) (Key matrix) has shape ($\text{seq}$, $d_k$)
--   ($d_k$) is the dimension of each key vector
--   ($A$) (attention map) has shape ($\text{seq}$, $\text{seq}$), meaning it represents how much each token attends to every other token in the sequence
+-   ( $Q = X W_Q$ ), ( $K = X W_K$ ), and ( $V = X W_V$ ) are learned transformations of the input ( $X$ ).
+-   ( $A$ ) is the **attention map**, which determines how much each element in the sequence attends to others.
+-   The denominator ( $\sqrt{d_k}$ ) is a scaling factor to stabilize gradients.
 
-As $Q$, $K$, and $V$ are dependent on the specific sequence encoded to $X$ ($Q = X W_Q$). this attention map ($A$) contains values between 0 and 1 (after the softmax normalization) and determines how much weight each token gives to every other token in the sequence **for a given sequence** before computing the final output representation. The value of each entry ($A_{ij}$) represents how much attention token ($i$) pays to token ($j$) in the sequence.
 
-The global attention map is not a simple sum of all the attention maps from different heads. Instead, attention heads operate in parallel, each computing a separate attention matrix ($A_h$), and their outputs are concatenated and linearly projected rather than summed. However, each individual attention map captures a specific conditional relation or dependence in the data.
+The term ( $QK\^T = (X W_Q) (X W_K)\^T$ ) computes a similarity measure between elements of ( $X$ ) after transformation. If ( $W_Q = W_K$ ), this resembles the **covariance matrix** of a linear transformation of ( $X$ ), and $QK^T$ can be re-writen as:
+
+$$QK\^T = X W_Q W_K\^T X\^T$$
+
+This is structurally similar to the sample covariance matrix:
+
+$$\text{Cov}(X) = X X^T$$
+
+but with additional learned transformations ( $W_Q$ ) and ( $W_K$ ). Thus, the attention map is effectively a learned, context-specific version of a covariance matrix. We can draw a (arguably somewht tenuous, but illustrative) mathematical connection between **self-attention** (through the ($QK^T$) term) and **correlation between elements of the input matrix**($X$). This helps bridge the intuition that attention is like a learned, contextual correlation matrix. Its good to remember we have abstracted away the role of the softmax normalistion and the $V$ matrix in service of illustrating how attentiosn is a litle bit like very dynamic context specific, and assymetric covariance
+
+The global attention map across a model is not a simple sum of all the attention maps from different heads. Instead, attention heads operate in parallel, each computing a separate attention matrix ($A_h$), and their outputs are concatenated and linearly projected rather than summed. However, each individual attention map captures a specific conditional relation or dependence in the data.
 
 ### How Attention is Stacked Across Layers
 
@@ -79,7 +81,7 @@ The intuition here is that the attention maps are amino-acid by amino-acid maps 
 
 Fortunately, the attention maps are generally an element we can export from language models using standard libraries like `transfomers` so we can write a function to extract all attention maps from a protein language model. These will become the predictors (`x`) in our logistic regression later.
 
-Since the model we trained in @sec-PLM is too small, and a larger model is still in the works (I am running all the compute for this book on my MacBook and an old gaming GPU) we'll work with `"facebook/esm2_t33_650M_UR50D"` an advanced PLM developed by Standford and Facebook. This particular version has 20 attention heads and 33 layers, so that's 20\*30 = 660 attention maps to use for prediction.
+Since the model we trained in @sec-PLM is too small, and a larger model is still in the works (I am running all the compute for this book on my MacBook and an old gaming GPU) we'll work with `"facebook/esm2_t33_650M_UR50D"` an advanced PLM developed by Standford and Facebook. This particular version has 20 attention heads and 33 layers, so that's $20*30 = 660$ attention maps to use for prediction.
 
 ``` python
 # Load model and tokenizer
