--- a/Chapter4_Proteins.qmd
+++ b/Chapter4_Proteins.qmd
@@ -53,15 +53,17 @@ where:
 -   The denominator ( $\sqrt{d_k}$ ) is a scaling factor to stabilize gradients.
 
 
-The term ( $QK^T = (X W_Q) (X W_K)^T$ ) computes a similarity measure between elements of ( $X$ ) after transformation. If ( $W_Q = W_K$ ), this resembles the **covariance matrix** of a linear transformation of ( $X$ ), and $QK^T$ can be re-writen as:
+The term ( $QK^T = (X W_Q) (X W_K)^T$ ) computes a similarity measure between elements of ( $X$ ) after transformation. If ( $W_Q = W_K$ ), this resembles the covariance matrix of a linear transformation of ( $X$ ), and $QK^T$ can be re-writen as:
 
 $$QK^T = X W_Q W_K^T X^T$$
 
-This is structurally similar to the sample covariance matrix:
+This is structurally similar to the sample covariance matrixe :
 
-$$\text{Cov}(X) = X X^T$$
+$$\text{Cov}(X) = X^T X$$
 
-but with additional learned transformations ( $W_Q$ ) and ( $W_K$ ). Thus, the attention map is effectively a learned, context-specific version of a covariance matrix. We can draw a (arguably somewht tenuous, but illustrative) mathematical connection between **self-attention** (through the ($QK^T$) term) and **correlation between elements of the input matrix**($X$). This helps bridge the intuition that attention is like a learned, contextual correlation matrix. Its good to remember we have abstracted away the role of the softmax normalistion and the $V$ matrix in service of illustrating how attentiosn is a litle bit like very dynamic context specific, and assymetric covariance
+but with additional learned transformations ( $W_Q$ ) and ( $W_K$ ). Thus, the attention map is effectively a learned, context-specific version of a covariance matrix. Note the transpose is on the other "end" of the product, but because we are computing the dependenence between tokens, and X contains the embeddings of the tokens the reversal of the transpose actually ensures we are modeling token dependence.
+
+So we can draw an, arguably somewhat tenuous but illustrative, mathematical connection between self-attention (through the ($QK^T$) term) and correlation between the token dimenson of the embedding matrix ($X$). This helps bridge the intuition that attention is somewhat like a learned, contextual correlation matrix. Its good to remember we have abstracted away the role of the softmax normalistion and the $V$ matrix in service of illustrating how attentiosn is a litle bit like very dynamic context specific, and assymetric covariance
 
 The global attention map across a model is not a simple sum of all the attention maps from different heads. Instead, attention heads operate in parallel, each computing a separate attention matrix ($A_h$), and their outputs are concatenated and linearly projected rather than summed. However, each individual attention map captures a specific conditional relation or dependence in the data.
 
