--- a/references.bib
+++ b/references.bib
@@ -254,3 +254,21 @@
 	url = {http://dx.doi.org/10.1126/science.ade2574},
 	langid = {en}
 }
+
+@article{vig2020,
+	title = {BERTology Meets Biology: Interpreting Attention in Protein Language Models},
+	author = {Vig, Jesse and Madani, Ali and Varshney, Lav R. and Xiong, Caiming and Socher, Richard and Rajani, Nazneen Fatema},
+	year = {2020},
+	date = {2020},
+	doi = {10.48550/ARXIV.2006.15222},
+	url = {https://arxiv.org/abs/2006.15222}
+}
+
+@article{poli2023,
+	title = {Hyena Hierarchy: Towards Larger Convolutional Language Models},
+	author = {Poli, Michael and Massaroli, Stefano and Nguyen, Eric and Fu, Daniel Y. and Dao, Tri and Baccus, Stephen and Bengio, Yoshua and Ermon, Stefano and {Ré}, Christopher},
+	year = {2023},
+	date = {2023},
+	doi = {10.48550/ARXIV.2302.10866},
+	url = {https://arxiv.org/abs/2302.10866}
+}
