--- a/Chapter4_Proteins.qmd
+++ b/Chapter4_Proteins.qmd
@@ -6,9 +6,9 @@ A protein’s amino acid sequence is one-dimensional (1D) information – the li
 
 ![**Figure 1:** Example of a protein contact map where "contact is defined as \< 12A distance between Ca](images/paste-26.png){fig-align="center"}
 
-Below we'll study how we can estimate contact maps from the self-attention networks, or maps, that are latently encoded in protein language models, based on ideas developed by Roa et al. Roa et al. [@rao2020]. This is frankly like magic, just by training to predict protein sequences, the model learns the 2D structure of the protein, and because we know 2D structure relates to 3D structure we can prove protein language models learn (elements of) the 3D structure of proteins.
+Below we'll study how we can estimate contact maps from the self-attention networks, or maps, that are latently encoded in protein language models, based on ideas developed by Roa et al. [@rao2020] and others[@vig2020]. This is frankly like magic, just by training to predict protein sequences, the model learns the 2D structure of the protein, and because we know 2D structure relates to 3D structure we can prove protein language models learn (elements of) the 3D structure of proteins.
 
-Though to be able to predict contact maps, we need to break open the models we have been training and study what attention is, and what attention maps are.
+Though to be able to predict contact maps, we need to break open the models we have been training and study what attention is, and what attention maps are. Frankly understanding attention, and I don't think I really did utill I had to dig in deep to write this chapter, is a key step to understanding *what* transformer like models are learning.
 
 ## What is attention *exactly*?
 
@@ -34,11 +34,11 @@ $$\text{Attention}(Q, K, V) = \text{softmax} \left(\frac{Q K^T}{\sqrt{d_k}}\righ
 
 where $(Q)$ represents the queries (which ask for relevant information), $(K)$ represents the keys (which provide relevance scores), and $(V)$ represents the values (the actual content being retrieved). The **softmax function** ensures that the attention scores sum to 1, effectively acting as a weighting mechanism over the values.
 
-The Query ($Q$), Key ($K$), and Value ($V$) matrices are derived from the input **embeddings** ($X$), which represent tokens in a continuous vector space. These embeddings are specific to the given sequence, meaning different input sequences will produce different embeddings. The transformation into $Q$, $K$, and $V$ happens through learned **weight matrices** ($W_Q$, $W_K$, $W_V$), which remain **constant after training** but are applied dynamically to the current sequence. Specifically, these transformations are computed as:
+The Query ($Q$), Key ($K$), and Value ($V$) matrices are derived from the input **embeddings** ($X$), which represent tokens in a continuous vector space. The embeddings dimensions are sequences length `k` by embedding dimensions `d`. These embeddings are specific to the given sequence, meaning different input sequences will produce different embeddings. The transformation into $Q$, $K$, and $V$ happens through learned **weight matrices** ($W_Q$, $W_K$, $W_V$), which remain **constant after training** but are applied dynamically to the current sequence. Specifically, these transformations are computed as:
 
 $$Q = X W_Q, \quad K = X W_K, \quad V = X W_V$$
 
-Since ($W_Q$, $W_K$, $W_V$) are learned parameters, they do not change per sequence after training, but the values of $Q$, $K$, and $V$ do change since they depend on the specific embeddings ($X$) of the input sequence. This means that while the attention mechanism itself is fixed after training, its outputs are entirely **input-dependent**, allowing the model to flexibly compute attention maps for different sequences while maintaining a consistent learned transformation process.
+Since ($W_Q$, $W_K$, $W_V$) are learned parameters, they do not change per sequence after training, but the values of $Q$, $K$, and $V$ do change since they depend on the specific embedding ($X$) of the input sequence. The **input-dependents** of $Q$, $K$, and $V$ allows the model to flexibly compute attention maps for different sequences while maintaining a consistent learned transformation process.
 
 ### Mathematical Link Between Attention and Correlation
 
@@ -52,20 +52,17 @@ where:
 -   ( $A$ ) is the **attention map**, which determines how much each element in the sequence attends to others.
 -   The denominator ( $\sqrt{d_k}$ ) is a scaling factor to stabilize gradients.
 
-
-The term ( $QK^T = (X W_Q) (X W_K)^T$ ) computes a similarity measure between elements of ( $X$ ) after transformation. If ( $W_Q = W_K$ ), this resembles the covariance matrix of a linear transformation of ( $X$ ), and $QK^T$ can be re-writen as:
+The term ( $QK^T = (X W_Q) (X W_K)^T$ ) computes a similarity measure between elements of ( $X$ ) after transformation. If ( $W_Q = W_K$ ), this resembles the covariance matrix of a linear transformation of ( $X$ ), and $QK^T$ can be re-written as:
 
 $$QK^T = X W_Q W_K^T X^T$$
 
-This is structurally similar to the sample covariance matrixe :
+This is structurally similar to the sample covariance matrix, where Z is an n people by m variables data matrix:
 
-$$\text{Cov}(X) = X^T X$$
+$$\text{Cov}(Z) = Z^T Z$$
 
-but with additional learned transformations ( $W_Q$ ) and ( $W_K$ ). Thus, the attention map is effectively a learned, context-specific version of a covariance matrix. Note the transpose is on the other "end" of the product, but because we are computing the dependenence between tokens, and X contains the embeddings of the tokens the reversal of the transpose actually ensures we are modeling token dependence.
+Note the transpose is on the other "end" of the product, but because we are computing the dependenence between a sequences of `d` tokens (rows of X), whule for covariance we compute the dependencies between `m` variables (columns of Z). The apperent reversal of the side of the equations that get transposed actually makes sense. There are obvious difference: attention obviously additional learned transformations ( $W_Q$ ) and ( $W_K$ ) and its asymmetric ($W_Q \neq W_Q$). Thus, the attention map is effectively a learned, context-specific, asymmetric version of dependence, which has analogs to a covariance matrix. Its good to remember we have abstracted away the role of the softmax normalization and the $V$ matrix in service of illustrating how attention is a little bit like very dynamic context specific, and asymmetric covariance
 
-So we can draw an, arguably somewhat tenuous but illustrative, mathematical connection between self-attention (through the ($QK^T$) term) and correlation between the token dimenson of the embedding matrix ($X$). This helps bridge the intuition that attention is somewhat like a learned, contextual correlation matrix. Its good to remember we have abstracted away the role of the softmax normalistion and the $V$ matrix in service of illustrating how attentiosn is a litle bit like very dynamic context specific, and assymetric covariance
-
-The global attention map across a model is not a simple sum of all the attention maps from different heads. Instead, attention heads operate in parallel, each computing a separate attention matrix ($A_h$), and their outputs are concatenated and linearly projected rather than summed. However, each individual attention map captures a specific conditional relation or dependence in the data.
+The global attention map across a model is not a simple sum of all the attention maps from different heads. Instead, `h` attention heads operate in parallel, each computing a separate attention matrix ($A_h$), and their outputs are concatenated and linearly projected rather than summed. However, each individual attention map can often be viewed as a specific conditional relation or dependence in the data.
 
 ### How Attention is Stacked Across Layers
 
@@ -75,7 +72,7 @@ In a transformer model, attention is not only computed within a single layer but
 
 ## Attention encodes biology
 
-Key interpretable AI work by Roa et al. [@rao2020] reveal that the attention matrices of sequences based (one dimensional) Protein language models encode the two dimensional structure of proteins. They extract all individual Attention maps, for a given sequence from a Protein language model, and using those to predict the estimated (or experimentally observed) contact maps for the same sequence.
+Key interpretable AI work by Roa et al. [@rao2020] reveal that the attention matrices of sequences based (one dimensional) Protein language models encode the two dimensional structure of proteins, while others have show attention encodes amino-acid substitution probabilities (which in turn relate to the potential deliteriousness of mutations)[@vig2020]. They extract all individual Attention maps, for a given sequence from a Protein language model, and using those to predict the estimated (or experimentally observed) contact maps for the same sequence.
 
 The intuition here is that the attention maps are amino-acid by amino-acid maps of the relation between the bases in a given sequences, which encode what other bases the model attends to at base $j$, and if the model encodes long range structure (which, spoiler, it does) when if base $j$ and base $I$ are far apart in the sequence, but interact and are co-evolving because their close in the proteins 3D structure, we expect some of the attention maps to tend to that interaction/co-evolution. As the model is an unsupervised black box, we obviously don't know what attention matrices will matter, so we'll simply use Logistic regression where the outcome is the "gold standard" contact map (in our case for convenience sake AlphaFold2 predictions of the contact map) and the predictors are the attention maps. By running logistic regression on only 4(!!!) genes and using the average coefficients we can predict a very crude outline of the contact map of the 5th gene (See **Figure 2**).
 
@@ -163,12 +160,22 @@ Based on the very limited regression model we can predict the hazy outline of th
 
 ![**Figure 2**: predicted (top) version "gold standard" contact map based on a very limited "model" trained on 4 genes, predicted into a fifth gene.](images/paste-27.png){fig-align="center"}
 
+I cant emphasize enough this is just an illustration and not an actual academic analysis/prediction, obviously a fuller implemnetation as done in [@rao2020] is.
+
 ::: callout-tip
 If you want a good Masters/PhD term project with limited compute demands, try improving/modeling contact maps. In sequence from beginner to advanced project you could for example: **1.** use ridge or lasso regression to improve on the effectiveness of the prediction. **2.** Train an actual tabular/regression model or adapter across a few thousand genes with very good experimental structure data to squeeze all the juice out of the attention matrices. **3.** Finetune a medium size PLM on a joint masked language model loss, and contact map prediction loss based on the attention maps, jointly optimizing the model as a PLM and a contact map prediction model.
 :::
 
+## The wonder of attention, and beyond
+
+The best summary of the amazing properties of attention I came across was in Poli et al.[@poli2023]. They,summarize years of mechanistic studies that abstract the essential features in attention that make it so highly effective at token sequence learning.
+
+1.  Attention is highly expressive, responsive to, and controlled by, the input data. It can see a new sequence, and from its training abstract (imperfectly) the interactions and relations between elements in that sequence.
+2.  While the model size (in terms of \# parameters) scales with sequences length, the parameter size of the attention weight matrices themselves do not! The weight matrices ($W_Q$, $W_K$, $W_V$) are of dimension embedding size, by key/query/value vector length.
+3.  While models have a set (or computationally limited) context size, the attention mechanism itself does not! Regardles of the token lenght dimension of X, the products ($Q = X W_Q$ ), ( $K = X W_K$ ), and ( $V = X W_V$ ) can be compute. Attention weights can attended to any pair of tokens regardless of their (relative) position. Though smart types of positional embedding are required to effectively capitalize on this aspect of attentions (i.e. effectively the degree to which attention scales beyond the sequence length seen during training is modest).
+
 ## Conclussion
 
-So what did we learn here? we learned that within the unsupervised PLM, which is trained on 1-D sequences, we uncover "knowledge" of 2D protein structure. What I did here is by no means an optimal protein contact prediciton but others have build on this idea and done so successfully[@lin2023].
+So what did we learn here? we learned that within the unsupervised PLM, which is trained on 1-D sequences, we uncover "knowledge" of 2D protein structure. What I did here is by no means an optimal protein contact prediction but others have build on this idea and done so successfully[@lin2023].
 
 In the next chapter we'll discuss how we can append models onto PLMs to go above and beyond and predict 3D protein structure.
