--- a/Chapter4_Proteins.qmd
+++ b/Chapter4_Proteins.qmd
@@ -174,6 +174,8 @@ The best summary of the amazing properties of attention I came across was in Pol
 2.  While the model size (in terms of \# parameters) scales with sequences length, the parameter size of the attention weight matrices themselves do not! The weight matrices ($W_Q$, $W_K$, $W_V$) are of dimension embedding size, by key/query/value vector length.
 3.  While models have a set (or computationally limited) context size, the attention mechanism itself does not! Regardles of the token lenght dimension of X, the products ($Q = X W_Q$ ), ( $K = X W_K$ ), and ( $V = X W_V$ ) can be compute. Attention weights can attended to any pair of tokens regardless of their (relative) position. Though smart types of positional embedding are required to effectively capitalize on this aspect of attentions (i.e. effectively the degree to which attention scales beyond the sequence length seen during training is modest).
 
+These amazing features come at a cost, the computational cost of attention scale quadratically with the length of the sequence (as $X$ "grows" so do $Q$,$K$,$V$)
+
 ## Conclussion
 
 So what did we learn here? we learned that within the unsupervised PLM, which is trained on 1-D sequences, we uncover "knowledge" of 2D protein structure. What I did here is by no means an optimal protein contact prediction but others have build on this idea and done so successfully[@lin2023].
