--- a/references.bib
+++ b/references.bib
@@ -272,3 +272,31 @@
 	doi = {10.48550/ARXIV.2302.10866},
 	url = {https://arxiv.org/abs/2302.10866}
 }
+
+@article{wengert1964,
+	title = {A simple automatic derivative evaluation program},
+	author = {Wengert, R. E.},
+	year = {1964},
+	month = {08},
+	date = {1964-08},
+	journal = {Communications of the ACM},
+	pages = {463--464},
+	volume = {7},
+	number = {8},
+	doi = {10.1145/355586.364791},
+	url = {http://dx.doi.org/10.1145/355586.364791},
+	langid = {en}
+}
+
+@inbook{griewank2012,
+	title = {Who invented the reverse mode of differentiation?},
+	author = {Griewank, Andreas},
+	year = {2012},
+	month = {01},
+	date = {2012-01-01},
+	publisher = {EMS Press},
+	pages = {389--400},
+	doi = {10.4171/dms/6/38},
+	url = {http://dx.doi.org/10.4171/dms/6/38},
+	langid = {en}
+}
