--- a/references.bib
+++ b/references.bib
@@ -300,3 +300,82 @@
 	url = {http://dx.doi.org/10.4171/dms/6/38},
 	langid = {en}
 }
+
+@article{dalla-torre2024,
+	title = {Nucleotide Transformer: building and evaluating robust foundation models for human genomics},
+	author = {Dalla-Torre, Hugo and Gonzalez, Liam and Mendoza-Revilla, Javier and Lopez Carranza, Nicolas and Grzywaczewski, Adam Henryk and Oteri, Francesco and Dallago, Christian and Trop, Evan and de Almeida, Bernardo P. and Sirelkhatim, Hassan and Richard, Guillaume and Skwark, Marcin and Beguir, Karim and Lopez, Marie and Pierrot, Thomas},
+	year = {2024},
+	month = {11},
+	date = {2024-11-28},
+	journal = {Nature Methods},
+	pages = {287--297},
+	volume = {22},
+	number = {2},
+	doi = {10.1038/s41592-024-02523-z},
+	url = {http://dx.doi.org/10.1038/s41592-024-02523-z},
+	langid = {en}
+}
+
+@article{zhou2023,
+	title = {DNABERT-2: Efficient Foundation Model and Benchmark For Multi-Species Genome},
+	author = {Zhou, Zhihan and Ji, Yanrong and Li, Weijian and Dutta, Pratik and Davuluri, Ramana and Liu, Han},
+	year = {2023},
+	date = {2023},
+	doi = {10.48550/ARXIV.2306.15006},
+	url = {https://arxiv.org/abs/2306.15006}
+}
+
+@article{patel2024,
+	title = {DART-Eval: A Comprehensive DNA Language Model Evaluation Benchmark on Regulatory DNA},
+	author = {Patel, Aman and Singhal, Arpita and Wang, Austin and Pampari, Anusri and Kasowski, Maya and Kundaje, Anshul},
+	year = {2024},
+	date = {2024},
+	doi = {10.48550/ARXIV.2412.05430},
+	url = {https://arxiv.org/abs/2412.05430}
+}
+
+@misc{tang2024,
+	title = {Evaluating the representational power of pre-trained DNA language models for regulatory genomics},
+	author = {Tang, Ziqi and Somia, Nirali and Yu, Yiyang and Koo, Peter K},
+	year = {2024},
+	month = {03},
+	date = {2024-03-04},
+	url = {http://dx.doi.org/10.1101/2024.02.29.582810}
+}
+
+@article{alquraishi2019,
+	title = {ProteinNet: a standardized data set for machine learning of protein structure},
+	author = {AlQuraishi, Mohammed},
+	year = {2019},
+	month = {06},
+	date = {2019-06-11},
+	journal = {BMC Bioinformatics},
+	volume = {20},
+	number = {1},
+	doi = {10.1186/s12859-019-2932-0},
+	url = {http://dx.doi.org/10.1186/s12859-019-2932-0},
+	langid = {en}
+}
+
+@article{nguyen2023a,
+	title = {HyenaDNA: Long-Range Genomic Sequence Modeling at Single Nucleotide Resolution},
+	author = {Nguyen, Eric and Poli, Michael and Faizi, Marjan and Thomas, Armin and Birch-Sykes, Callum and Wornow, Michael and Patel, Aman and Rabideau, Clayton and Massaroli, Stefano and Bengio, Yoshua and Ermon, Stefano and Baccus, Stephen A. and {Ré}, Chris},
+	year = {2023},
+	date = {2023},
+	doi = {10.48550/ARXIV.2306.15794},
+	url = {https://arxiv.org/abs/2306.15794}
+}
+
+@article{zhang2024,
+	title = {Protein language models learn evolutionary statistics of interacting sequence motifs},
+	author = {Zhang, Zhidian and Wayment-Steele, Hannah K. and Brixi, Garyk and Wang, Haobo and Kern, Dorothee and Ovchinnikov, Sergey},
+	year = {2024},
+	month = {10},
+	date = {2024-10-28},
+	journal = {Proceedings of the National Academy of Sciences},
+	volume = {121},
+	number = {45},
+	doi = {10.1073/pnas.2406285121},
+	url = {http://dx.doi.org/10.1073/pnas.2406285121},
+	langid = {en}
+}
